--- a/plugins/sociallogin/facebook/media/css/button.css
+++ b/plugins/sociallogin/facebook/media/css/button.css
@@ -5,24 +5,24 @@
  */
 
 .akeeba-sociallogin-link-button-facebook, .akeeba-sociallogin-unlink-button-facebook, .akeeba-sociallogin-button-facebook {
-    background-color: #3B5998;
-    color: #ffffff;
-    transition-duration: 0.33s;
-    background-image: none;
-    border-color: #23355b;
+    background-color: #3B5998 !important;
+    color: #ffffff !important;
+    transition-duration: 0.33s !important;
+    background-image: none !important;
+    border-color: #23355b !important;
 }
 
 .akeeba-sociallogin-link-button-facebook:hover, .akeeba-sociallogin-unlink-button-facebook:hover, .akeeba-sociallogin-button-facebook:hover {
-    background-color: #8B9DC3;
-    color: #ffffff;
-    transition-duration: 0.33s;
-    border-color: #3B5998;
+    background-color: #8B9DC3 !important;
+    color: #ffffff !important;
+    transition-duration: 0.33s !important;
+    border-color: #3B5998 !important;
 }
 
 .akeeba-sociallogin-link-button-facebook img, .akeeba-sociallogin-unlink-button-facebook img, .akeeba-sociallogin-button-facebook img {
-    display: inline-block;
-    width: 16px;
-    height: 16px;
-    margin: 0 0.33em 0.1em 0;
-    padding: 0
+    display: inline-block !important;
+    width: 16px !important;
+    height: 16px !important;
+    margin: 0 0.33em 0.1em 0 !important;
+    padding: 0 !important;
 }
