--- a/plugins/sociallogin/github/media/css/button.css
+++ b/plugins/sociallogin/github/media/css/button.css
@@ -5,24 +5,24 @@
  */
 
 .akeeba-sociallogin-link-button-github, .akeeba-sociallogin-unlink-button-github, .akeeba-sociallogin-button-github {
-    background-color: #000000;
-    color: #ffffff;
-    transition-duration: 0.33s;
-    background-image: none;
-    border-color: #333333;
+    background-color: #000000 !important;
+    color: #ffffff !important;
+    transition-duration: 0.33s !important;
+    background-image: none !important;
+    border-color: #333333 !important;
 }
 
 .akeeba-sociallogin-link-button-github:hover, .akeeba-sociallogin-unlink-button-github:hover, .akeeba-sociallogin-button-github:hover {
-    background-color: #333333;
-    color: #ffffff;
-    transition-duration: 0.33s;
-    border-color: #999999;
+    background-color: #333333 !important;
+    color: #ffffff !important;
+    transition-duration: 0.33s !important;
+    border-color: #999999 !important;
 }
 
 .akeeba-sociallogin-link-button-github img, .akeeba-sociallogin-unlink-button-github img, .akeeba-sociallogin-button-github img {
-    display: inline-block;
-    width: 16px;
-    height: 16px;
-    margin: 0 0.33em 0.1em 0;
-    padding: 0
+    display: inline-block !important;
+    width: 16px !important;
+    height: 16px !important;
+    margin: 0 0.33em 0.1em 0 !important;
+    padding: 0 !important;
 }
