--- a/plugins/sociallogin/microsoft/media/css/button.css
+++ b/plugins/sociallogin/microsoft/media/css/button.css
@@ -5,24 +5,24 @@
  */
 
 .akeeba-sociallogin-link-button-microsoft, .akeeba-sociallogin-unlink-button-microsoft, .akeeba-sociallogin-button-microsoft {
-    background-color: #cccccc;
-    color: #000000;
-    transition-duration: 0.33s;
-    background-image: none;
-    border-color: #1F1F1F;
+    background-color: #cccccc !important;
+    color: #000000 !important;
+    transition-duration: 0.33s !important;
+    background-image: none !important;
+    border-color: #1F1F1F !important;
 }
 
 .akeeba-sociallogin-link-button-microsoft:hover, .akeeba-sociallogin-unlink-button-microsoft:hover, .akeeba-sociallogin-button-microsoft:hover {
-    background-color: #2b2b2b;
-    color: #ffffff;
-    transition-duration: 0.33s;
-    border-color: #2B2B2B;
+    background-color: #2b2b2b !important;
+    color: #ffffff !important;
+    transition-duration: 0.33s !important;
+    border-color: #2B2B2B !important;
 }
 
 .akeeba-sociallogin-link-button-microsoft img, .akeeba-sociallogin-unlink-button-microsoft img, .akeeba-sociallogin-button-microsoft img {
-    display: inline-block;
-    width: 75px;
-    height: 16px;
-    margin: 0.1em 0.33em 0 0;
-    padding: 0
+    display: inline-block !important;
+    width: 75px !important;
+    height: 16px !important;
+    margin: 0.1em 0.33em 0 0 !important;
+    padding: 0 !important;
 }
