--- a/plugins/sociallogin/twitter/media/css/button.css
+++ b/plugins/sociallogin/twitter/media/css/button.css
@@ -5,24 +5,24 @@
  */
 
 .akeeba-sociallogin-link-button-twitter, .akeeba-sociallogin-unlink-button-twitter, .akeeba-sociallogin-button-twitter {
-    background-color: #1DA1F2;
-    color: #ffffff;
-    transition-duration: 0.33s;
-    background-image: none;
-    border-color: #0b4060;
+    background-color: #1DA1F2 !important;
+    color: #ffffff !important;
+    transition-duration: 0.33s !important;
+    background-image: none !important;
+    border-color: #0b4060 !important;
 }
 
 .akeeba-sociallogin-link-button-twitter:hover, .akeeba-sociallogin-unlink-button-twitter:hover, .akeeba-sociallogin-button-twitter:hover {
-    background-color: #1470a9;
-    color: #ffffff;
-    transition-duration: 0.33s;
-    border-color: #3B5998;
+    background-color: #1470a9 !important;
+    color: #ffffff !important;
+    transition-duration: 0.33s !important;
+    border-color: #3B5998 !important;
 }
 
 .akeeba-sociallogin-link-button-twitter img, .akeeba-sociallogin-unlink-button-twitter img, .akeeba-sociallogin-button-twitter img {
-    display: inline-block;
-    width: 16px;
-    height: 16px;
-    margin: 0 0.33em 0.1em 0;
-    padding: 0
+    display: inline-block !important;
+    width: 16px !important;
+    height: 16px !important;
+    margin: 0 0.33em 0.1em 0 !important;
+    padding: 0 !important;
 }
