--- a/plugins/sociallogin/microsoft/media/css/button.css
+++ b/plugins/sociallogin/microsoft/media/css/button.css
@@ -1,7 +1,7 @@
-/**
- * @package   AkeebaSocialLogin
- * @copyright Copyright (c)2016-2019 Nicholas K. Dionysopoulos / Akeeba Ltd
- * @license   GNU General Public License version 3, or later
+/*
+ *  @package   AkeebaSocialLogin
+ *  @copyright Copyright (c)2016-2020 Nicholas K. Dionysopoulos / Akeeba Ltd
+ *  @license   GNU General Public License version 3, or later
  */
 
 .akeeba-sociallogin-link-button-microsoft, .akeeba-sociallogin-unlink-button-microsoft, .akeeba-sociallogin-button-microsoft {
