--- a/plugins/sociallogin/apple/media/css/button.css
+++ b/plugins/sociallogin/apple/media/css/button.css
@@ -12,17 +12,16 @@
     border-color: #2b2b2b !important;
 }
 
-.akeeba-sociallogin-link-button-apple:hover, .akeeba-sociallogin-unlink-button-apple:hover, .akeeba-sociallogin-button-apple:hover {
-    background-color: #2b2b2b !important;
-    color: #ffffff !important;
-    transition-duration: 0.33s !important;
-    border-color: #444444 !important;
-}
-
 .akeeba-sociallogin-link-button-apple img, .akeeba-sociallogin-unlink-button-apple img, .akeeba-sociallogin-button-apple img {
     display: inline-block !important;
     width: 14px !important;
     height: 16px !important;
     margin: 0 0.33em 0.1em 0 !important;
     padding: 0 !important;
+}
+
+.akeeba-sociallogin-button-apple--image img {
+    display: revert;
+    width: auto;
+    height: auto;
 }
