--- a/plugins/sociallogin/facebook/media/css/button.css
+++ b/plugins/sociallogin/facebook/media/css/button.css
@@ -5,18 +5,12 @@
  */
 
 .akeeba-sociallogin-link-button-facebook, .akeeba-sociallogin-unlink-button-facebook, .akeeba-sociallogin-button-facebook {
-    background-color: #3B5998 !important;
+    background-color: #1877F2 !important;
     color: #ffffff !important;
-    transition-duration: 0.33s !important;
+    text-shadow: none !important;
     background-image: none !important;
-    border-color: #23355b !important;
-}
-
-.akeeba-sociallogin-link-button-facebook:hover, .akeeba-sociallogin-unlink-button-facebook:hover, .akeeba-sociallogin-button-facebook:hover {
-    background-color: #8B9DC3 !important;
-    color: #ffffff !important;
-    transition-duration: 0.33s !important;
-    border-color: #3B5998 !important;
+    border: none !important;
+    padding: 8px 8px !important;
 }
 
 .akeeba-sociallogin-link-button-facebook img, .akeeba-sociallogin-unlink-button-facebook img, .akeeba-sociallogin-button-facebook img {
