--- a/plugins/sociallogin/google/media/css/button.css
+++ b/plugins/sociallogin/google/media/css/button.css
@@ -5,25 +5,32 @@
  */
 
 .akeeba-sociallogin-link-button-google, .akeeba-sociallogin-unlink-button-google, .akeeba-sociallogin-button-google {
+    font-family: "Roboto Medium", sans-serif;
     background-color: #4285F4 !important;
     color: #ffffff !important;
-    transition-duration: 0.33s !important;
+    text-shadow: none !important;
     background-image: none !important;
-    border-color: #4285F4 !important;
-    padding: 8px 8px !important;
+    border: none !important;
+    padding: 2px 8px 2px 2px !important;
 }
 
-.akeeba-sociallogin-link-button-google:hover, .akeeba-sociallogin-unlink-button-google:hover, .akeeba-sociallogin-button-google:hover {
-    background-color: #3c63cc !important;
-    color: #ffffff !important;
-    transition-duration: 0.33s !important;
-    border-color: #3c63cc !important;
+.akeeba-sociallogin-link-button-j4-google {
+    padding: 8px 8px 8px 8px !important;
 }
 
 .akeeba-sociallogin-link-button-google img, .akeeba-sociallogin-unlink-button-google img, .akeeba-sociallogin-button-google img {
+    background-color: white;
     display: inline-block !important;
     width: 18px !important;
     height: 18px !important;
-    margin: 0 24px 0 0 !important;
-    padding: 0 !important;
+    margin: 0 18px 0 0 !important;
+    padding: 6px !important;
+}
+
+.akeeba-sociallogin-link-button-j4-google img {
+    width: 20px !important;
+    height: 20px !important;
+    margin: 0 18px 0 0 !important;
+    padding: 2px !important;
+
 }
