--- a/plugins/sociallogin/microsoft/media/css/button.css
+++ b/plugins/sociallogin/microsoft/media/css/button.css
@@ -1,4 +1,4 @@
-/*!
+/*
  *  @package   AkeebaSocialLogin
  *  @copyright Copyright (c)2016-2021 Nicholas K. Dionysopoulos / Akeeba Ltd
  *  @license   GNU General Public License version 3, or later
@@ -7,16 +7,4 @@
 .akeeba-sociallogin-link-button-microsoft, .akeeba-sociallogin-unlink-button-microsoft, .akeeba-sociallogin-button-microsoft {
     background-color: rgb(47, 47, 47) !important;
     color: white !important;
-    text-shadow: none !important;
-    background-image: none !important;
-    border: none !important;
-    padding: 9px 12px 9px 12px !important;
-}
-
-.akeeba-sociallogin-link-button-microsoft img, .akeeba-sociallogin-unlink-button-microsoft img, .akeeba-sociallogin-button-microsoft img {
-    display: inline-block !important;
-    width: 16px !important;
-    height: 16px !important;
-    margin: 0 12px 0 0 !important;
-    padding: 0 !important;
 }
