--- a/plugins/sociallogin/apple/media/css/button.css
+++ b/plugins/sociallogin/apple/media/css/button.css
@@ -1,28 +1,15 @@
-/*!
+/*
  *  @package   AkeebaSocialLogin
  *  @copyright Copyright (c)2016-2021 Nicholas K. Dionysopoulos / Akeeba Ltd
  *  @license   GNU General Public License version 3, or later
  */
 
+:root {
+    --sociallogin-apple-bg: #000000;
+    --sociallogin-apple-fg: #ffffff;
+}
+
 .akeeba-sociallogin-link-button-apple, .akeeba-sociallogin-unlink-button-apple, .akeeba-sociallogin-button-apple {
-    background-color: #000000 !important;
-    color: #ffffff !important;
-    text-shadow: none !important;
-    background-image: none !important;
-    border: none !important;
-    padding: 8px 8px !important;
-}
-
-.akeeba-sociallogin-link-button-apple img, .akeeba-sociallogin-unlink-button-apple img, .akeeba-sociallogin-button-apple img {
-    display: inline-block !important;
-    width: 14px !important;
-    height: 16px !important;
-    margin: 0 0.33em 0.1em 0 !important;
-    padding: 0 !important;
-}
-
-.akeeba-sociallogin-button-apple--image img {
-    display: revert;
-    width: auto;
-    height: auto;
+    background-color: var(--sociallogin-apple-bg) !important;
+    color: var(--sociallogin-apple-fg) !important;
 }
