--- a/plugins/sociallogin/google/media/css/button.css
+++ b/plugins/sociallogin/google/media/css/button.css
@@ -1,36 +1,15 @@
-/*!
+/*
  *  @package   AkeebaSocialLogin
  *  @copyright Copyright (c)2016-2021 Nicholas K. Dionysopoulos / Akeeba Ltd
  *  @license   GNU General Public License version 3, or later
  */
 
+:root {
+    --sociallogin-google-bg: #4285F4;
+    --sociallogin-google-fg: #ffffff;
+}
+
 .akeeba-sociallogin-link-button-google, .akeeba-sociallogin-unlink-button-google, .akeeba-sociallogin-button-google {
-    font-family: "Roboto Medium", sans-serif;
-    background-color: #4285F4 !important;
-    color: #ffffff !important;
-    text-shadow: none !important;
-    background-image: none !important;
-    border: none !important;
-    padding: 2px 8px 2px 2px !important;
-}
-
-.akeeba-sociallogin-link-button-j4-google {
-    padding: 8px 8px 8px 8px !important;
-}
-
-.akeeba-sociallogin-link-button-google img, .akeeba-sociallogin-unlink-button-google img, .akeeba-sociallogin-button-google img {
-    background-color: white;
-    display: inline-block !important;
-    width: 18px !important;
-    height: 18px !important;
-    margin: 0 18px 0 0 !important;
-    padding: 6px !important;
-}
-
-.akeeba-sociallogin-link-button-j4-google img {
-    width: 20px !important;
-    height: 20px !important;
-    margin: 0 18px 0 0 !important;
-    padding: 2px !important;
-
+    background-color: var(--sociallogin-google-bg) !important;
+    color: var(--sociallogin-google-fg) !important;
 }
