--- a/plugins/sociallogin/linkedin/media/css/button.css
+++ b/plugins/sociallogin/linkedin/media/css/button.css
@@ -1,28 +1,15 @@
-/*!
+/*
  *  @package   AkeebaSocialLogin
  *  @copyright Copyright (c)2016-2021 Nicholas K. Dionysopoulos / Akeeba Ltd
  *  @license   GNU General Public License version 3, or later
  */
 
+:root {
+    --sociallogin-linkedin-bg: rgb(48, 119, 176);
+    --sociallogin-linkedin-fg: white;
+}
+
 .akeeba-sociallogin-link-button-linkedin, .akeeba-sociallogin-unlink-button-linkedin, .akeeba-sociallogin-button-linkedin {
-    background-color: rgb(48, 119, 176) !important;
-    color: white !important;
-    text-shadow: none !important;
-    background-image: none !important;
-    border: 1px solid #999999 !important;
-    padding: 8px 8px !important;
-}
-
-.akeeba-sociallogin-link-button-linkedin img, .akeeba-sociallogin-unlink-button-linkedin img, .akeeba-sociallogin-button-linkedin img {
-    display: inline-block !important;
-    width: 22px !important;
-    height: 16px !important;
-    margin: 0 0.33em 0.1em 0 !important;
-    padding: 0 !important;
-}
-
-.akeeba-sociallogin-button-linkedin--image img {
-    display: revert;
-    width: auto;
-    height: auto;
+    background-color: var(--sociallogin-linkedin-bg) !important;
+    color: var(--sociallogin-linkedin-fg) !important;
 }
