--- a/plugins/sociallogin/twitter/media/css/button.css
+++ b/plugins/sociallogin/twitter/media/css/button.css
@@ -1,4 +1,4 @@
-/*!
+/*
  *  @package   AkeebaSocialLogin
  *  @copyright Copyright (c)2016-2021 Nicholas K. Dionysopoulos / Akeeba Ltd
  *  @license   GNU General Public License version 3, or later
@@ -7,16 +7,4 @@
 .akeeba-sociallogin-link-button-twitter, .akeeba-sociallogin-unlink-button-twitter, .akeeba-sociallogin-button-twitter {
     background-color: #1DA1F2 !important;
     color: #ffffff !important;
-    text-shadow: none !important;
-    background-image: none !important;
-    border: none !important;
-    padding: 9px 8px !important;
-}
-
-.akeeba-sociallogin-link-button-twitter img, .akeeba-sociallogin-unlink-button-twitter img, .akeeba-sociallogin-button-twitter img {
-    display: inline-block !important;
-    width: 16px !important;
-    height: 16px !important;
-    margin: 0 0.33em 0.1em 0 !important;
-    padding: 0 !important;
 }
