~ Changed the namespace of the plugins from Joomla\Plugin to Akeeba\Plugin

--- a/plugins/system/sociallogin/forms/sociallogin.xml
+++ b/plugins/system/sociallogin/forms/sociallogin.xml
@@ -6,7 +6,7 @@
   -->
 
 <form>
-	<fields name="sociallogin" addfieldprefix="Joomla\Plugin\System\SocialLogin\Field">
+	<fields name="sociallogin" addfieldprefix="Akeeba\Plugin\System\SocialLogin\Field">
 		<fieldset name="sociallogin"
 			label="PLG_SYSTEM_SOCIALLOGIN_HEADER"
 		>
